# IntersectionSampler

./: .gitignore  CMakeLists.txt  data.txt  plot_debug_scene.py  readme.md
examples/boundary_cases/: data_cone_horizontal_circle.txt  data_cone_plane_near_apex.txt  data_cone_radius_max.txt  data_cone_through_apex.txt  data_cone_very_small_radius.txt  data_cylinder_horizontal_circle.txt  data_cylinder_plane_near_base.txt  data_cylinder_radius_max.txt  data_cylinder_through_axis.txt  data_cylinder_very_small_radius.txt
examples/empty/: data_cone_empty_1.txt  data_cone_empty_2.txt  data_cylinder_empty_1.txt  data_cylinder_empty_2.txt
examples/intersection/: data_cone_intersection_1.txt  data_cone_intersection_2.txt  data_cone_intersection_3.txt  data_cylinder_intersection_1.txt  data_cylinder_intersection_2.txt  data_cylinder_intersection_3.txt
result/: intersection_points.txt  plane_points.txt  shape_cone_points.txt
src/: CommonTypes.cpp  CommonTypes.h  Constants.h  DataReader.cpp  DataWriter.cpp  DataWriter.h  InputData.h  IntersectionPointSampler.cpp  IntersectionPointSampler.h  IntersectionPointSamplerFactory.h  Plane.cpp  Plane.h  PlanePointSampler.cpp  PlanePointSampler.h  SamplingPipeline.cpp  SamplingPipeline.h  SamplingUtils.cpp  SamplingUtils.h  ShapePointSampler.cpp  ShapePointSampler.h  Shapes.cpp  Shapes.h  Status.cpp  Status.h  main.cpp
src/Common/: AppError.cpp  AppError.h  Cone.cpp  Cone.h  Constants.h  Cylinder.cpp  Cylinder.h  Direction3D.cpp  Direction3D.h  ErrorCode.h  Plane.cpp  Plane.h  Point3D.cpp  Point3D.h  ValidationUtils.cpp  ValidationUtils.h  Vector3D.cpp  Vector3D.h
src/CommonTypes/: Plane.cpp  Vector3D.cpp
src/IO/: DataReader.cpp  DataReader.h  DataWriter.cpp  DataWriter.h  InputData.cpp  InputData.h
src/SamplingPoints/: IntersectionPointSampler.cpp  IntersectionPointSampler.h  IntersectionPointSamplerFactory.cpp  IntersectionPointSamplerFactory.h  PlanePointSampler.cpp  PlanePointSampler.h  SamplingUtils.cpp  SamplingUtils.h  ShapePointSampler.cpp  ShapePointSampler.h
